--- a/index.html
+++ b/index.html
@@ -1,38 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Expanding Card</title>
-</head>
-<body>
-  <h1 class="title">Explore the World</h1>
-
-  <div class="container">
-    <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1613339027986-b94d85708995?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1548&q=80');">
-      <h3>Explore The Rivers</h3>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Expanding Card</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="progress-container">
+        <div class="progress" id="progress"></div>
+        <div class="circle active">1</div>
+        <div class="circle">2</div>
+        <div class="circle">3</div>
+        <div class="circle">4</div>
+      </div>
+      <button class="btn" id="prev" disabled>Prev</button>
+      <button class="btn" id="next" >Next</button>
     </div>
-
-    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1610147323479-a7fb11ffd5dd?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1548&q=80');">
-      <h3>Explore The Mountains</h3>
-    </div>
-
-    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1612467968134-e58957756c7a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1742&q=80');">
-      <h3>Explore The Nature</h3>
-    </div>
-
-    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1564283808925-2d2685c71339?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1548&q=80');">
-      <h3>Explore The Lakes</h3>
-    </div>
-
-    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1610723764622-753b9dbce712?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1738&q=80');">
-      <h3>Explore The Night</h3>
-    </div>
-
-   
-  </div>
-  <script src="app.js"></script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
